--- a/Coin_gogogo/app/build.gradle
+++ b/Coin_gogogo/app/build.gradle
@@ -58,6 +58,11 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
 
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2' // 레트로핏 설치 (필수)
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2' // 컨버터 (선택)
+    implementation 'com.google.code.gson:gson:2.8.5' //GSON (선택)
+
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
