--- a/Coin_gogogo/app/build.gradle
+++ b/Coin_gogogo/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     //rxjava
-    implementation "io.reactivex.rxjava3:rxjava:3.0.13-RC4"
+    implementation "io.reactivex.rxjava3:rxjava:3.0.0"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
 
@@ -62,6 +62,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.2' // 레트로핏 설치 (필수)
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2' // 컨버터 (선택)
     implementation 'com.google.code.gson:gson:2.8.5' //GSON (선택)
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation 'androidx.appcompat:appcompat:1.3.0'
