--- a/Coin_gogogo/app/build.gradle
+++ b/Coin_gogogo/app/build.gradle
@@ -33,7 +33,9 @@ android {
 
     buildFeatures {
         dataBinding true
+        viewBinding true
     }
+
 }
 
 repositories {
@@ -64,6 +66,19 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5' //GSON (선택)
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
+    //파이어베이스
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation platform('com.google.firebase:firebase-bom:26.6.0')
+    implementation 'com.google.firebase:firebase-analytics' // 파이어베이스 앱 분석
+    implementation 'com.google.firebase:firebase-core:19.0.0' // 파이어베이스 코어
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore:23.0.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.firebaseui:firebase-ui-storage:6.4.0'
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firebase:firebase-messaging-directboot:22.0.0'
+    implementation 'com.google.firebase:firebase-messaging'
+
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
@@ -72,3 +87,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+apply plugin: 'com.google.gms.google-services'
