--- a/Coin_gogogo/app/src/main/AndroidManifest.xml
+++ b/Coin_gogogo/app/src/main/AndroidManifest.xml
@@ -12,16 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Coin_gogogo">
+        <activity android:name=".activity.WriteActivity"></activity>
+        <activity android:name=".activity.PostActivity" />
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".activity.BoardActivity">
-        </activity>
+        <activity android:name=".activity.BoardActivity" />
     </application>
 
 </manifest>
