--- a/Coin_gogogo/app/src/main/AndroidManifest.xml
+++ b/Coin_gogogo/app/src/main/AndroidManifest.xml
@@ -8,12 +8,14 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:hardwareAccelerated="false"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:largeHeap="true"
         android:theme="@style/Theme.Coin_gogogo">
-        <activity android:name=".activity.WriteActivity"></activity>
-        <activity android:name=".activity.PostActivity" />
+        <activity android:name=".activity.WriteActivity"/>
+        <activity android:name=".activity.PostActivity"/>
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.BoardActivity" />
+        <activity android:name=".activity.BoardActivity"
+            />
     </application>
 
 </manifest>
