--- a/Coin_gogogo/app/build.gradle
+++ b/Coin_gogogo/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     //mpchart
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
-    //gson
+    //gson,glide,volley
     implementation 'com.android.volley:volley:1.2.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
