--- a/Coin_kotlin/app/build.gradle
+++ b/Coin_kotlin/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-parcelize'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -70,7 +71,7 @@ dependencies {
     //파이어베이스
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation platform('com.google.firebase:firebase-bom:26.6.0')
-    implementation 'com.google.firebase:firebase-analytics' // 파이어베이스 앱 분석
+    implementation 'com.google.firebase:firebase-analytics-ktx' // 파이어베이스 앱 분석
     implementation 'com.google.firebase:firebase-core:19.0.0' // 파이어베이스 코어
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore:23.0.0'
