--- a/Coin_kotlin/app/src/main/AndroidManifest.xml
+++ b/Coin_kotlin/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Coin_kotlin">
-        <activity android:name=".activity.BoardActivity"></activity>
+        <activity android:name=".activity.WriteActivity"></activity>
+        <activity android:name=".activity.BoardActivity" />
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
