--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/AndroidManifest.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/AndroidManifest.xml
@@ -6,15 +6,16 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Coin_kotlin">
-        <activity android:name=".activity.Login"
+        android:theme="@style/Theme.Coin_kotlin"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".activity.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,10 +23,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.PostActivity" android:exported="false"/>
-        <activity android:name=".activity.WriteActivity" android:exported="false"/>
-        <activity android:name=".activity.BoardActivity" android:exported="false"/>
-        <activity android:name=".activity.MainActivity" android:exported="false"/>
+        <activity
+            android:name=".activity.SearchActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.PostActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.WriteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.BoardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
