--- a/Coin_Kotlin-master/Coin_kotlin/app/build.gradle
+++ b/Coin_Kotlin-master/Coin_kotlin/app/build.gradle
@@ -74,7 +74,11 @@ dependencies {
     //코루틴
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.0.0"
     implementation 'com.google.guava:guava:27.0.1-android'
+    // Coroutines - Retrofit extention
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'ru.gildor.coroutines:kotlin-coroutines-retrofit:0.13.0-eap13'
 
     //광고
     implementation 'com.google.android.gms:play-services-ads:20.6.0'
