--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/AndroidManifest.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~3347511713" />
+            android:value="@string/adKey" />
 
         <service
             android:name=".model.MyFirebaseMessagingService"
