--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/AndroidManifest.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/AndroidManifest.xml
@@ -93,6 +93,7 @@
             android:exported="true" />
         <activity
             android:name=".activity.MainActivity"
+            android:launchMode="singleInstance"
             android:exported="true" />
     </application>
 
