--- a/Coin_Kotlin-master/Coin_kotlin/app/build.gradle
+++ b/Coin_Kotlin-master/Coin_kotlin/app/build.gradle
@@ -40,6 +40,9 @@ android {
 }
 
 dependencies {
+    //ripple
+    implementation 'com.balysv:material-ripple:1.0.2'
+
     //mpchart
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
