--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/AndroidManifest.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/AndroidManifest.xml
@@ -74,7 +74,7 @@
             android:name=".infoactivity.InfoActivity"
             android:exported="true" />
         <activity
-            android:name=".activity.Login"
+            android:name=".activity.LoginActivity"
             android:exported="true" />
         <activity
             android:name=".infoactivity.InfoActivity"
