--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/AndroidManifest.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.Coin_kotlin"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".infoactivity.SourceActivity"
+            android:exported="false" />
+        <activity
             android:name=".infoactivity.NoticeActivity"
             android:exported="false" />
         <activity
