--- a/Coin_Kotlin-master/Coin_kotlin/app/build.gradle
+++ b/Coin_Kotlin-master/Coin_kotlin/app/build.gradle
@@ -40,6 +40,9 @@ android {
 }
 
 dependencies {
+    //라이센스
+    implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
+
     //ripple
     implementation 'com.balysv:material-ripple:1.0.2'
 
@@ -79,6 +82,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.0.0"
     implementation 'com.google.guava:guava:27.0.1-android'
+
     // Coroutines - Retrofit extention
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation 'ru.gildor.coroutines:kotlin-coroutines-retrofit:0.13.0-eap13'
