--- a/Coin_kotlin/app/src/main/AndroidManifest.xml
+++ b/Coin_kotlin/app/src/main/AndroidManifest.xml
@@ -19,18 +19,23 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".infoactivity.SourceActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".infoactivity.NoticeActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".infoactivity.PolicyActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".infoactivity.AlarmSettingActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".activity.AlarmActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
 
         <uses-library
@@ -65,6 +70,7 @@
 
         <activity
             android:name=".activity.AdmobActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -74,36 +80,46 @@
         </activity>
         <activity
             android:name=".infoactivity.MypostActivity"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".infoactivity.ChangeNicknameActivity"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:theme="@android:style/Theme.Holo.Light.Dialog" />
         <activity
             android:name=".infoactivity.InfoActivity"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".activity.LoginActivity"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".infoactivity.InfoActivity"
+            android:screenOrientation="portrait"
             android:exported="true"
             tools:ignore="DuplicateActivity" />
         <activity
             android:name=".activity.SearchActivity"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".activity.PostActivity"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:launchMode="singleTop" />
         <activity
             android:name=".activity.WriteActivity"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".activity.BoardActivity"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".activity.MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:launchMode="singleTop" />
     </application>
